# github-actions-powerpc

./: CMakeLists.txt  CMakePresets.json  README.md  demo_time.c
.github/workflows/: ppc64.yml
